<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:nestedScrollingEnabled="false"
    tools:context=".GameplayActivity">

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button10"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_10"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_11"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button12"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_12"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button13"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button14"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button10"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button15"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button11"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ImageButton
        android:id="@+id/button16"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button12"
        app:srcCompat="?android:attr/galleryItemBackground" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:progressDrawable="@drawable/custom_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <TextView
        android:id="@+id/text_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_00_00"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/exit_button"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/exit_button"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moveCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/moves_left"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />


</androidx.constraintlayout.widget.ConstraintLayout>